--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "hexon",
-  "version": "0.12.5",
+  "name": "konnokai-hexon",
+  "version": "0.0.1",
   "private": true,
-  "author": "winwin2011 <yjh2011@live.com>",
+  "author": "Konnokai <contact@konnokai.me>",
   "license": "GPL-3.0",
   "scripts": {
-    "release": "standard-version --releaseCommitMessageFormat='chore: release v{{currentTag}}' && pnpm build && git add . && git commit -m 'chore: build released'",
-    "prerelease": "standard-version --releaseCommitMessageFormat='chore: release v{{currentTag}}' --prerelease && pnpm build && git add . && git commit -m 'chore: build released'",
-    "build": "concurrently -p [{name}] -n 'server,client' -c 'green.bold,blue.bold' 'cd ./server && pnpm build' 'cd ./client && pnpm build' ",
-    "setup": "cd ./server && pnpm install -P && pnpm run setup",
-    "script": "cd ./server && pnpm script",
-    "resetpwd": "cd ./server && pnpm resetpwd",
-    "start": "cd ./server && pnpm start",
-    "prd": "cd ./server && pnpm prd",
-    "dev-init": "pnpm install && concurrently -p [{name}] -n 'server,client' -c 'green.bold,blue.bold' 'cd ./server && pnpm i' 'cd ./client && pnpm i' && cd ./server && pnpm run build && pnpm run setup",
-    "dev": "concurrently -p [{name}] -n 'server,client' -c 'green.bold,blue.bold' 'cd ./server && pnpm dev' 'cd ./client && pnpm dev' "
+    "release": "standard-version --releaseCommitMessageFormat=\"chore: release v{{currentTag}}\" && pnpm build && git add . && git commit -m \"chore: build released\"",
+    "prerelease": "standard-version --releaseCommitMessageFormat=\"chore: release v{{currentTag}}\" --prerelease && pnpm build && git add . && git commit -m \"chore: build released\"",
+    "build": "concurrently -p [{name}] -n \"server,client\" -c \"green.bold,blue.bold\" \"cd .\\server && pnpm build\" \"cd .\\client && pnpm build\" ",
+    "setup": "cd .\\server && pnpm install -P && pnpm run setup",
+    "script": "cd .\\server && pnpm script",
+    "resetpwd": "cd .\\server && pnpm resetpwd",
+    "start": "cd .\\server && pnpm start",
+    "prd": "cd .\\server && pnpm prd",
+    "dev-init": "pnpm install && concurrently -p [{name}] -n \"server,client\" -c \"green.bold,blue.bold\" \"cd .\\server && pnpm i\" \"cd .\\client && pnpm i\" && cd .\\server && pnpm run build && pnpm run setup",
+    "dev": "concurrently -p [{name}] -n \"server,client\" -c \"green.bold,blue.bold\" \"cd .\\server & pnpm dev\" \"cd .\\client & pnpm dev\""
   },
   "devDependencies": {
     "concurrently": "^7.1.0",
