--- a/client/package.json
+++ b/client/package.json
@@ -9,30 +9,30 @@
     "doc": "vite --config .demo/vite.config.ts"
   },
   "dependencies": {
-    "@vueuse/core": "^8.2.5",
-    "@vueuse/integrations": "^8.2.5",
+    "@vueuse/core": "^8.9.4",
+    "@vueuse/integrations": "^8.9.4",
     "@winwin/vue-global-theming": "^0.1.5",
     "@winwin/vue-side-split": "^0.0.5",
-    "animejs": "^3.2.1",
+    "animejs": "^3.2.2",
     "axios": "^0.26.1",
-    "chalk": "^5.0.1",
+    "chalk": "^5.3.0",
     "color": "^4.2.3",
     "color-convert": "^2.0.1",
-    "crypto-js": "^4.1.1",
-    "dayjs": "^1.11.0",
-    "hexo-front-matter": "^3.0.0",
+    "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.11",
+    "hexo-front-matter": "^4.2.1",
     "js-yaml": "^4.1.0",
-    "jsencrypt": "^3.2.1",
+    "jsencrypt": "^3.3.2",
     "lodash-es": "^4.17.21",
     "monaco-editor": "0.33.0",
-    "pinia": "^2.0.0-rc.14",
-    "prettier": "^2.6.2",
+    "pinia": "^2.1.7",
+    "prettier": "^2.8.8",
     "string-similarity": "^4.0.4",
     "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2",
     "vite-plugin-compression": "^0.5.1",
-    "vue": "^3.2.31",
+    "vue": "^3.4.27",
     "vue-router": "4.0.14",
-    "zod": "^3.14.4"
+    "zod": "^3.23.8"
   }
 }
