--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:fresh-install": "bash ./scripts/fresh_installation.test.sh"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.23.2",
     "@types/animejs": "^3.1.12",
     "@types/basic-auth": "^1.1.8",
     "@types/color": "^3.0.6",
@@ -44,7 +45,8 @@
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^17.0.45",
     "@types/uuid": "^8.3.4",
-    "@types/ws": "^8.5.10",
+    "@types/ws": "^8.5.11",
+    "@unocss/eslint-plugin": "^0.61.5",
     "@unocss/preset-attributify": "^0.33.5",
     "@unocss/preset-uno": "^0.33.5",
     "@unocss/reset": "^0.33.5",
@@ -52,25 +54,23 @@
     "@vicons/fluent": "^0.12.0",
     "@vicons/utils": "^0.1.4",
     "@vitejs/plugin-vue": "^2.3.4",
-    "@vue/compiler-sfc": "^3.4.27",
+    "@vue/compiler-sfc": "^3.4.34",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.19",
     "babel-loader": "^8.3.0",
     "concurrently": "^7.6.0",
     "esbuild": "^0.14.54",
     "esbuild-plugin-node-externals": "^0.3.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^9.7.0",
     "faker": "^6.6.6",
     "jest": "^27.5.1",
     "jsdom": "^19.0.0",
     "less": "^4.2.0",
     "less-loader": "^10.2.0",
-    "naive-ui": "^2.38.2",
+    "naive-ui": "^2.39.0",
     "nodemon": "^2.0.22",
     "picocolors": "^1.0.1",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.40",
     "prettier": "^2.8.8",
     "rimraf": "^3.0.2",
     "rollup-plugin-visualizer": "^5.12.0",
@@ -78,11 +78,11 @@
     "stylus": "^0.57.0",
     "ts-jest": "^27.1.5",
     "tsconfig-paths": "^3.15.0",
-    "typescript": "^4.9.5",
+    "typescript": "^5.5.4",
     "unocss": "^0.33.5",
     "vite": "^2.9.18",
     "vite-plugin-pages": "^0.22.0",
     "vite-plugin-vue-layouts": "^0.6.0",
-    "vue-tsc": "^2.0.19"
+    "vue-tsc": "^2.0.28"
   }
 }
